force-app/main/default/objects/EFPIO__OrchestrationEvent__c/EFPIO__OrchestrationEvent__c.object-meta.xml
<CustomObject>
    <description>Orchestration Event</description>
    <label>Orchestration Event</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Orchestration Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>