force-app/main/default/objects/EFPIO__OrchestrationEvent__c/fields/EFPIO__CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__CorrelationId__c</fullName>
    <description>Correlation Id</description>
    <label>Correlation Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>