force-app/main/default/objects/EFPIO__OrchestrationEvent__c/fields/EFPIO__EventLogId__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__EventLogId__c</fullName>
    <label>Event Log Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>